update(profile): complete user profile details

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,7 +1,31 @@
 <top-menu></top-menu>
 
+<div class="between-sections"><br><br></div>
 <div class="container">
-  <p>
-    profile works!
-  </p>
+  <!--Section: Profile-->
+  <section class="section">
+    <!--Section heading-->
+    <h1 class="section-heading">Profile</h1>
+    <br>
+    <!--Author box-->
+    <div class="author-box">
+        <div class="row">
+          <!--Avatar-->
+          <div class="col-xs-12 col-sm-2">
+            <img [src]="(profile | async)?.photoURL" class="img-fluid rounded-circle z-depth-2">
+          </div>
+          <!--Author Data-->
+          <div class="col-xs-12 col-sm-10">
+            <p>
+              <strong>{{ (profile | async)?.displayName }}</strong><br>
+              <small>{{ (profile | async)?.email }}</small><br>
+              <small>Logged in with: {{ (profile | async)?.provider }}</small>
+            </p>
+          </div>
+        </div>
+      </div>
+      <!--/.Author box-->
+  </section>
+  <!--Section: Profile-->
 </div>
+<div class="between-sections"><br><br></div>
