--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -1,42 +1,42 @@
 <!--Navbar-->
-<nav class="navbar navbar-expand-lg navbar-dark elegant-color-dark fixed-top scrolling-navbar">
-  <div class="container">
-    <a class="navbar-brand" routerLink="/home">DevFest KC 2017</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/speakers">Speakers</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/sessions">Schedule</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/sponsors">Sponsors</a>
-        </li>
-        <li class="nav-item" *ngIf="!isLoggedIn()">
-          <a class="nav-link" (click)="userLogin()">Login</a>
-        </li>
-        <li class="nav-item dropdown" *ngIf="isLoggedIn()">
-          <a class="nav-link dropdown-toggle waves-effect waves-light" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Profile
-          </a>
-          <div class="dropdown-menu dropdown-ins dropdown-menu-right " aria-labelledby="navbarDropdownMenuLink" data-dropdown-in="fadeIn" data-dropdown-out="fadeOut">
-            <a class="dropdown-item waves-effect waves-light" *ngIf="isAdmin()" routerLink="/admin">Admin</a>
-            <a class="dropdown-item waves-effect waves-light" routerLink="/profile">My Account</a>
-            <a class="dropdown-item waves-effect waves-light" (click)="userLogout()">Logout</a>
-          </div>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="https://devfestkc-2017.eventbrite.com" target="_blank">Buy Ticket</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark elegant-color-dark fixed-top scrolling-navbar">
+  <!-- Navbar brand -->
+  <logo><a class="navbar-brand" routerLink="/home">DevFest KC 2017</a></logo>
+  <!-- Collapsible content -->
+  <links>
+    <!-- Links -->
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link waves-light" mdbRippleRadius routerLink="/home">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light" mdbRippleRadius routerLink="/speakers">Speakers</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light" mdbRippleRadius routerLink="/sessions">Schedule</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light" mdbRippleRadius routerLink="/sponsors">Sponsors</a>
+      </li>
+      <li class="nav-item" *ngIf="!isLoggedIn()">
+        <a class="nav-link waves-light" mdbRippleRadius (click)="userLogin()">Login</a>
+      </li>
+      <li class="nav-item dropdown btn-group" *ngIf="isLoggedIn()" dropdown>
+        <a dropdownToggle class="nav-link dropdown-toggle waves-light" mdbRippleRadius>
+          Profile<span class="caret"></span>
+        </a>
+        <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+          <a class="dropdown-item waves-light" *ngIf="isAdmin()" routerLink="/admin">Admin</a>
+          <a class="dropdown-item waves-light" routerLink="/profile">My Account</a>
+          <a class="dropdown-item waves-light" (click)="userLogout()">Logout</a>
+        </div>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="https://devfestkc-2017.eventbrite.com" target="_blank">Buy Ticket</a>
+      </li>
+    </ul>
+    <!-- Links -->
+  </links>
+  <!-- Collapsible content -->
+</mdb-navbar>
 <!--/.Navbar-->
