--- a/src/app/top-menu/top-menu.component.scss
+++ b/src/app/top-menu/top-menu.component.scss
@@ -1,14 +1,10 @@
-.top-menu li:first-child {
-  margin-left: 40px;
-}
-
-.navbar .dropdown-menu a:hover {
-  color: #1d1e1f !important;
-}
+// .top-menu li:first-child {
+//   margin-left: 40px;
+// }
 
 .dropdown .dropdown-menu .dropdown-item:active,
 .dropdown .dropdown-menu .dropdown-item:focus,
 .dropdown .dropdown-menu .dropdown-item:hover {
-  color: #1d1e1f;
+  color: #1d1e1f !important;
   background-color: #e7e7e7;
 }
