--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,99 +4,4 @@
 <router-outlet></router-outlet>
 <!--/ Main container-->
 
-
-<!--Footer-->
-<footer class="page-footer center-on-small-only elegant-color-dark">
-
-  <!--Footer Links-->
-  <div class="container-fluid">
-    <div class="row">
-
-      <!--First column-->
-      <div class="col-lg-3 col-md-6 ml-auto">
-        <h5 class="titles font-bold mt-3 mb-4">ABOUT GDG KANSAS CITY</h5>
-        <p>We are a technology user group that meets regularly to discuss the latest Google Technologies, Tools, SDKs, APIs,
-          and much more.</p>
-        <p><small><strong>Disclaimer:</strong> <em>GDG Kansas City is an independent group; our activities and the opinions expressed here should in no way be linked to Google, the corporation.</em></small></p>
-      </div>
-      <!--/.First column-->
-
-      <hr class="w-100 clearfix d-sm-none">
-
-      <!--Second column-->
-      <div class="col-lg-2 col-md-6 ml-auto">
-        <h5 class="title font-bold mt-3 mb-4">Links</h5>
-        <ul>
-          <li><a href="https://gdgkc.org" target="_blank">GDG Kansas City</a></li>
-          <li><a href="https://developers.google.com/" target="_blank">Google Developers</a></li>
-        </ul>
-      </div>
-      <!--/.Second column-->
-
-      <hr class="w-100 clearfix d-sm-none">
-
-      <!--Third column-->
-      <div class="col-lg-2 col-md-6 ml-auto">
-        <h5 class="title font-bold mt-3 mb-4">Contact</h5>
-        <ul>
-          <li><a href="mailto:devfest@gdgkc.org" target="_blank">devfest@gdgkc.org</a></li>
-          <li><a href="https://twitter.com/home?status=@DevFestKC" target="_blank">@DevFestKC</a></li>
-          <li><a href="https://twitter.com/home?status=@GDGKansasCity" target="_blank">@GDGKansasCity</a></li>
-        </ul>
-      </div>
-      <!--/.Third column-->
-
-      <hr class="w-100 clearfix d-sm-none">
-
-      <!--Fourth column-->
-      <div class="col-lg-2 col-md-6 ml-auto">
-        <h5 class="title font-bold mt-3 mb-4">FAQ</h5>
-        <ul>
-          <li><a href="https://developers.google.com/groups/" target="_blank">Google Developer Groups</a></li>
-          <li><a href="https://developers.google.com/events/devfest/" target="_blank">GDG DevFest Season</a></li>
-          <li><a href="https://developers.google.com/groups/guidelines/" target="_blank">GDG Code of Conduct</a></li>
-        </ul>
-      </div>
-      <!--/.Fourth column-->
-
-    </div>
-  </div>
-  <!--/.Footer Links-->
-
-  <hr>
-
-  <!--Call to action-->
-  <div class="call-to-action">
-    <ul>
-      <li>
-        <h5>Reserve your ticket today!</h5>
-      </li>
-      <li><a href="https://devfestkc-2017.eventbrite.com" target="_blank" class="btn btn-danger">Buy Ticket</a></li>
-    </ul>
-  </div>
-  <!--/.Call to action-->
-
-  <hr>
-
-  <!--Social buttons-->
-  <div class="social-section mb-3">
-    <ul>
-      <li><a class="btn-social-all" href="https://plus.google.com/116015988631052616691" title="Google+" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-      <li><a class="btn-social-all" href="https://www.facebook.com/GDGKansasCity" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a></li>
-      <li><a class="btn-social-all" href="https://twitter.com/GDGKansasCity" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a></li>
-      <li><a class="btn-social-all" href="https://www.meetup.com/GDG-Kansas-City/" title="Meetup" target="_blank"><i class="fa fa-meetup"></i></a></li>
-      <li><a class="btn-social-all" href="https://github.com/GDGKansasCity" title="GitHub" target="_blank"><i class="fa fa-github"></i></a></li>
-    </ul>
-  </div>
-  <!--/.Social buttons-->
-
-  <!--Copyright-->
-  <div class="footer-copyright">
-    <div class="container-fluid">
-      © {{ copyright }} Copyright <a href="https://gdgkc.org" target="_blank">GDG Kansas City</a>
-    </div>
-  </div>
-  <!--/.Copyright-->
-
-</footer>
-<!--/.Footer-->
+<app-footer></app-footer>
